Adjust text blob

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,8 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Demo of GPT2 Model</h1>
-          <p class="lead">Enter the following fields, let AI generate texts for you.</p>
+          <p class="lead">Fill in the starting text box with a phrase and let AI autocomplete it for you.</p>
+          <p> A deployed smaller model for <a href="https://blog.openai.com/better-language-models/">OpenAI GPT-2</a></p>
         </div>
       </div>
 
